[package]
name = "adkg-vrf"
version = "0.1.0"
edition = "2021"
authors = ["Alistair Stewart", "Sergey Vasilyev <swasilyev@gmail.com>"]

[dependencies]
ark-std = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
ark-transcript = { git = "https://github.com/w3f/ark-transcript" }
derivative = "2.2.0"

[dev-dependencies]
ark-bls12-381 = { version = "0.5", default-features = false, features = ["curve"] }

[features]
print-trace = ["ark-std/print-trace"]